fixed gtag page

--- a/analytics/gtag.html
+++ b/analytics/gtag.html
@@ -11,14 +11,17 @@
 
 <body>
 
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7N74CSGPZH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-7N74CSGPZH');
-  </script>
+  gtag('config', 'G-7N74CSGPZH');
+</script>
 
   <h1>gtag/js</h1>
+
 </body>
 </html>
